--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
     font-family: poynter-oldstyle-text, serif;
     background-color: #7A9FBF;
-    margin: 0;
+    margin: 10px;
     padding: 0;
 }
 
@@ -13,40 +13,41 @@ body {
 }
 
 .author {
-    font-size: 4vw;
+    font-size: 3vw;
     margin-left: 14em;
     color: #836A4A;
 }
 
-.stanza1 {
+.poem {
     font-size: 2vw;
-    margin: auto;
+    margin: 10em;
     padding: 10em;
-    line-height: 100%;
+    line-height: 200%;
+}
+.stanza1 {
     color: #D9BC9A;
 }
 
 .stanza2 {
-    font-size: 2vw;
-    margin: auto;
-    padding: 10em;
-    line-height: 100%;
     color: #D9BC9A;
 }
 
 .stanza3 {
-    font-size: 2vw;
-    margin: auto;
-    padding: 10em;
-    line-height: 100%;
     color: #D9BC9A;
 }
 
-
 .stanza4 {
-    font-size: 2vw;
-    margin: auto;
-    padding: 10em;
-    line-height: 100%;
     color: #D9BC9A;
+}
+
+@media screen and (max-width: 767px) {
+    body {
+        background-color: #7A9FBF;
+    }
+}
+
+@media screen and (max-width: 1024px) and (min-width: 768px) {
+    body {
+        background-color: #7A9FBF;
+    }
 }
